--- a/ch7/故事——南三又.md
+++ b/ch7/故事——南三又.md
@@ -1,4 +1,26 @@
 # 故事——南三又
 
+很久以前有个神兽梦貘，以梦为食。
+
+每天吃掉很多梦，正在进行的梦。
+
+人们醒来的时候总是不记得自己的梦境。
+
+小袁是个梦境收集者，他用编程语言制作了一个捕梦网。
+
+他每时每刻的梦境都以另一种语言输记录，成功躲掉了梦貘的狩猎。
+
+有一天，梦貘得了厌食症，吐出了好多好多梦，美梦，噩梦，造成梦境大混乱。
+
+人们现在梦境漩涡中无法醒来。
+
+小袁是为数不多的清醒的人，在小袁的眼睛里梦境不过是一串串的代码，梦貘的漩涡对他不起作用。
+
+小袁用尽全力支起来捕梦网，让它转动着。
+
+最终逮捕了噩梦，存储了美梦，人们也从漩涡中醒了过来。
+
+人们开始学习小袁的做法来记录自己的梦境，掌控自己的暗夜思维。
+
 
 
