--- a/ch7/故事——孟琦.md
+++ b/ch7/故事——孟琦.md
@@ -1,1 +1,24 @@
-# 
+# 故事——孟琦
+
+萌萌是新媒体运营，每天担心着灵感枯竭，无尽的压力使她经常从梦中惊醒。
+
+这天，她像往常一样为了写出有趣的文章绞尽脑汁，前夜的那个梦突然给了她灵感。
+
+于是她将灵感融入文字，一篇10万+的文章诞生了。
+这样她开始关注自己那些有趣的梦，用一点时间记录梦，从梦中发现灵感。
+
+她逐渐建立了自己的梦境空间，也有了固定的灵感来源。
+
+后来，一个叫小宇的男孩在梦境世界讲述了自己一个精彩的梦。
+
+萌萌在看到这个梦时激动的发抖，她决心要把这个梦写成一部小说，她的第一部小说。
+
+在征得小宇同意后，她开始了创作，成书时邀请小宇作序。
+
+他们都认为，这本书是两个人梦想的实现。
+
+在梦境空间中这样的佳话时有发生，或许是你，又或许是她，在梦境中抓住了灵感那个淘气的小精灵，带它走进现实，成就你的美梦。
+
+
+
+
